--- a/package.json
+++ b/package.json
@@ -5,7 +5,9 @@
     "android": "expo start --android",
     "ios": "expo start --ios",
     "web": "expo start --web",
-    "eject": "expo eject"
+    "eject": "expo eject",
+    "deploy": "npm run build&&gh-pages -d build",  
+    "build": "npm run build && gh-pages -d build"
   },
   "dependencies": {
     "aws-amplify": "^3.0.23",
