--- a/package.json
+++ b/package.json
@@ -5,19 +5,20 @@
     "android": "expo start --android",
     "ios": "expo start --ios",
     "web": "expo start --web",
-    "eject": "expo eject",
-    "deploy": "npm run build&&gh-pages -d build",  
-    "build": "npm run build && gh-pages -d build"
+    "eject": "expo eject"
   },
   "dependencies": {
-    "aws-amplify": "^3.0.23",
-    "aws-amplify-react-native": "^4.2.4",
-    "expo": "~38.0.8",
-    "expo-status-bar": "^1.0.2",
-    "native-base": "^2.13.13",
-    "react": "~16.11.0",
-    "react-dom": "~16.11.0",
-    "react-native": "https://github.com/expo/react-native/archive/sdk-38.0.2.tar.gz",
+    "@react-native-community/netinfo": "5.5.1",
+    "aws-amplify": "^3.0.13",
+    "aws-amplify-react-native": "^4.2.0",
+    "expo": "~37.0.3",
+    "expo-image-picker": "~8.1.0",
+    "expo-permissions": "~8.1.0",
+    "native-base": "^2.13.12",
+    "react": "~16.9.0",
+    "react-dom": "~16.9.0",
+    "react-native": "https://github.com/expo/react-native/archive/sdk-37.0.1.tar.gz",
+    "react-native-options-menu": "^2.0.2",
     "react-native-web": "~0.11.7"
   },
   "devDependencies": {
